# SysVitals

./: Cargo.toml  LICENSE.md  README.md  install.ps1  install.sh
.github/workflows/: release-build.yml
src/: main.rs
src/core/: app.rs  args.rs  config.rs  error.rs  mod.rs  runner.rs
src/metrics/: cpu.rs  disk.rs  gpu.rs  historical_metric.rs  memory.rs  metrics.rs  mod.rs  network.rs  unix_cpu.rs  unix_gpu.rs  unix_metrics.rs  unix_npu.rs  unix_rga.rs
src/ui/: bars.rs  chart_utils.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  ui.rs  unix_cpu.rs  unix_gpu.rs  unix_npu.rs  unix_rga.rs
