[package]
name = "sysvitals"
version = "1.0.1"
edition = "2024"

[dependencies]
ratatui = { version = "0.26", default-features = false, features = ['crossterm'] }
crossterm = "0.29"
sysinfo = "0.35"
tokio = { version = "1.0", features = ["full"] }
nvml-wrapper = "0.11"  # For NVIDIA GPU monitoring
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
directories = "5.0"
