[package]
name = "sysvitals"
version = "1.0.1"
edition = "2024"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
sysinfo = "0.35"
nvml-wrapper = "0.11"  # For NVIDIA GPU monitoring (NVIDIA-only)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
